// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`minimal block snapshot 1`] = `
[
  {
    "apiVersion": "v1",
    "data": {
      "block.json": "H4sIAAAAAAACE02NsQ6CMBRF/+XO1cS1o+hgkDjg4mQKPLBC32vaSmIM/25KHJzPued+QDxYJmiwiIdCR71lm6ww9AdDkJeHRiPitq04KMwU4kox76AwWu6gsZcV+ukVzPQbRCjE9kHO5FR6+3wjzZPalNUgnkKyFDNl4+jPiilYHrAsy6KQPZMkZE48F8K9HSrj12G5P1+Ksr7Xt/p6rO6nAzTGZpJ2jJv4jolcrnwBS3a68OgAAAA=",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      "config.json": "{"config":{"configVersion":"v1","schedule":[{"name":"read","crontab":"* * * * *","allowFailure":true}],"kubernetes":[{"apiVersion":"boom.com/v1","kind":"Boom","executeHookOnEvent":["Added","Modified","Deleted"]}]}}",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "boom-configmapvolume-block-json-c8b85b34",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-operator-serviceaccount-c863141e",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-operator-clusterrole-c8e55e70",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-operator-clusterrolebinding-c8dd7855",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-operator-clusterrole-c8e55e70",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-operator-serviceaccount-c863141e",
        "namespace": "{{ .Release.Namespace }}",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-operator",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "129767d5d23ab330fb9b9efbd8968d3f18f1d81b9c857039a30d4cd3d95613",
        "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
      },
      "name": "kblocks-boom-operator",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-Operator-Deployment-c810923d",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-Operator-Deployment-c810923d",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "129767d5d23ab330fb9b9efbd8968d3f18f1d81b9c857039a30d4cd3d95613",
            "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks-system",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-redis.{{ .Release.Namespace }}.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "1",
                },
              ],
              "image": "dummy/test-operator-image:latest",
              "imagePullPolicy": "Always",
              "name": "operator",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
                },
              ],
            },
            {
              "image": "redis:6.2-alpine",
              "imagePullPolicy": "IfNotPresent",
              "name": "redis",
              "ports": [
                {
                  "containerPort": 6379,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-operator-serviceaccount-c863141e",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
            },
            {
              "configMap": {
                "name": "boom-configmapvolume-block-json-c8b85b34",
              },
              "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "boom-redis",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-Operator-Deployment-c810923d",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-worker-workerserviceaccount-c8480528",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-worker-workerclusterrole-c88cb3c8",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-worker-workerclusterrolebinding-c8dc7047",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-worker-workerclusterrole-c88cb3c8",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-worker-workerserviceaccount-c8480528",
        "namespace": "{{ .Release.Namespace }}",
      },
    ],
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "kblocks-boom-worker",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 3000,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-Worker-WorkerStatefulSet-c8e7278a",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "129767d5d23ab330fb9b9efbd8968d3f18f1d81b9c857039a30d4cd3d95613",
        "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
      },
      "name": "kblocks-boom-worker",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "minReadySeconds": 0,
      "podManagementPolicy": "OrderedReady",
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-Worker-WorkerStatefulSet-c8e7278a",
        },
      },
      "serviceName": "kblocks-boom-worker",
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-Worker-WorkerStatefulSet-c8e7278a",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "129767d5d23ab330fb9b9efbd8968d3f18f1d81b9c857039a30d4cd3d95613",
            "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks-system",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-redis.{{ .Release.Namespace }}.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "RELEASE_NAME",
                  "value": "{{ .Release.Name }}",
                },
                {
                  "name": "KBLOCK_OUTPUTS_BOOM-COM-V1-BOOMS",
                  "value": "",
                },
                {
                  "name": "WORKER_INDEX",
                  "valueFrom": {
                    "fieldRef": {
                      "fieldPath": "metadata.labels['apps.kubernetes.io/pod-index']",
                    },
                  },
                },
              ],
              "image": "dummy/test-worker-image:latest",
              "imagePullPolicy": "Always",
              "name": "worker",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "startupProbe": {
                "failureThreshold": 3,
                "tcpSocket": {
                  "port": 3000,
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-worker-workerserviceaccount-c8480528",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
            },
            {
              "configMap": {
                "name": "boom-configmapvolume-block-json-c8b85b34",
              },
              "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
            },
          ],
        },
      },
      "updateStrategy": {
        "rollingUpdate": {
          "partition": 0,
        },
        "type": "RollingUpdate",
      },
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-control-serviceaccount-c867682d",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-control-clusterrole-c822c923",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-control-clusterrolebinding-c839e5e6",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-control-clusterrole-c822c923",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-control-serviceaccount-c867682d",
        "namespace": "{{ .Release.Namespace }}",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-control",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "129767d5d23ab330fb9b9efbd8968d3f18f1d81b9c857039a30d4cd3d95613",
        "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
      },
      "name": "kblocks-boom-control",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-Control-Deployment-c8e74eae",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-Control-Deployment-c8e74eae",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "129767d5d23ab330fb9b9efbd8968d3f18f1d81b9c857039a30d4cd3d95613",
            "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks-system",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-redis.{{ .Release.Namespace }}.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "1",
                },
              ],
              "image": "dummy/test-control-image:latest",
              "imagePullPolicy": "Always",
              "name": "control",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-control-serviceaccount-c867682d",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
            },
            {
              "configMap": {
                "name": "boom-configmapvolume-block-json-c8b85b34",
              },
              "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "apiextensions.k8s.io/v1",
    "kind": "CustomResourceDefinition",
    "metadata": {
      "annotations": {
        "kblocks.io/metadata-namespace": "{{ .Release.Namespace }}",
      },
      "name": "booms.boom.com",
    },
    "spec": {
      "group": "boom.com",
      "names": {
        "kind": "Boom",
        "plural": "booms",
      },
      "scope": "Namespaced",
      "versions": [
        {
          "additionalPrinterColumns": [
            {
              "description": "Is resource ready",
              "jsonPath": ".status.conditions[0].status",
              "name": "Ready",
              "type": "string",
            },
            {
              "description": "The status of the resource",
              "jsonPath": ".status.conditions[0].message",
              "name": "Status",
              "type": "string",
            },
          ],
          "name": "v1",
          "schema": {
            "openAPIV3Schema": {
              "properties": {
                "name": {
                  "type": "string",
                },
                "status": {
                  "properties": {
                    "conditions": {
                      "items": {
                        "properties": {
                          "lastProbeTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "lastTransitionTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "reason": {
                            "type": "string",
                          },
                          "status": {
                            "type": "string",
                          },
                          "type": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "type",
                          "status",
                          "lastTransitionTime",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                    "lastStateHash": {
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "served": true,
          "storage": true,
          "subresources": {
            "status": {},
          },
        },
      ],
    },
  },
]
`;

exports[`multiple blocks 1`] = `
[
  {
    "apiVersion": "v1",
    "data": {
      "block.json": "H4sIAAAAAAACE02OXU/CMBSG/8t7PUzY5e5kTkOQYRwh8YqUcph1tKdpy8xC+t9NKwYv36/nnCvI9MoQKhhmiwJHOimjgmKD6ore8cWiwoFZP0jWKDCS8znFOEeBQZkjKiw4h/Z8ceJ8G3gU8PKTtEioMNl0hg9fJEOqOrbkgiKfUiM0/Wv54JTpEWOMBVJPBHZ/PW+FTCU9ze6yAJmxI+koZGDX1O/Ndp5Y2ZylZ3/N8m6WiHlYszmpfi1s3tab9nn5sn58S3OZIy1sJqwWr5t61e27j27brPfLJ1QYDmeWg5/5yQfSN2LiNO0uEciMedu0u/Im891vdgM5j6qM8QcMq061iQEAAA==",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      "block.json": "H4sIAAAAAAACE02OXU/CMBSG/8t7PUzY5e50TEOQYRwh8YqUcph1tKdpy8xC+t9NKwYv36/nnCvI9MoQKhhmiwJHOimjgmKD6ore8cWiwpFZP0jWKDCS8znFOEeBQZkjKiw4h/Z8ceJ8G3gU8PKTtEioMNl0hg9fJEOqOrbkgiKfUiM0/Wv54JTpEWOMBVJPBHZ/PW+FTCU9ze6yAJmxI+koZGDX1O/Ndp5Y2ZylZ3/N8m6WiHlYszmpfi1s3tab9nn5sn58S3OZIy1sJqyeXjf1qtt3H922We+XC1QYDmeWg5/5yQfSN2LiNO0uEciMedu0u/Im891vdgM5j6qM8QfKjCCpiQEAAA==",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      "config.json": "{"config":{"configVersion":"v1","schedule":[{"name":"read","crontab":"* * * * *","allowFailure":true}],"kubernetes":[{"apiVersion":"boom.com/v1","kind":"Boom","executeHookOnEvent":["Added","Modified","Deleted"]},{"apiVersion":"doom.com/v1","kind":"Doom","executeHookOnEvent":["Added","Modified","Deleted"]}]}}",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "boom-doom-configmapvolume-block-json-c839368f",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-doom-operator-serviceaccount-c8800f81",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-doom-operator-clusterrole-c82fd034",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-doom-operator-clusterrolebinding-c8e87e11",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-doom-operator-clusterrole-c82fd034",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-doom-operator-serviceaccount-c8800f81",
        "namespace": "my-namespace",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-doom-operator",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "f91622554b28e22660e7e504f7dd83b1ae07978d49ba83536c0901ec70d860",
        "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "f0ab16b277d350769739fd0e2f4cade22b72e6167d21a2b4057d7fbc5dc93b",
        "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
      },
      "name": "kblocks-boom-doom-operator",
      "namespace": "my-namespace",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-doom-Operator-Deployment-c81ed77e",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-doom-Operator-Deployment-c81ed77e",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "f91622554b28e22660e7e504f7dd83b1ae07978d49ba83536c0901ec70d860",
            "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "f0ab16b277d350769739fd0e2f4cade22b72e6167d21a2b4057d7fbc5dc93b",
            "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "SECRET1",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET1",
                      "name": "secret-1",
                    },
                  },
                },
                {
                  "name": "SECRET2",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET2",
                      "name": "secret-2",
                    },
                  },
                },
                {
                  "name": "CONFIGMAP1",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "CONFIGMAP1",
                      "name": "configmap-1",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks-system",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-doom-redis.my-namespace.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ENV1",
                  "value": "env-1",
                },
                {
                  "name": "ENV2",
                  "value": "env-2",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "2",
                },
              ],
              "image": "dummy/test-operator-image:latest",
              "imagePullPolicy": "Always",
              "name": "operator",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
                },
                {
                  "mountPath": "/kblock-DOOM-COM-V1-DOOMS",
                  "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
                },
              ],
            },
            {
              "image": "redis:6.2-alpine",
              "imagePullPolicy": "IfNotPresent",
              "name": "redis",
              "ports": [
                {
                  "containerPort": 6379,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-doom-operator-serviceaccount-c8800f81",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
            },
            {
              "configMap": {
                "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
              },
              "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
            },
            {
              "configMap": {
                "name": "boom-doom-configmapvolume-block-json-c839368f",
              },
              "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "boom-doom-redis",
      "namespace": "my-namespace",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-doom-Operator-Deployment-c81ed77e",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-doom-worker-workerserviceaccount-c8d18f73",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-doom-worker-workerclusterrole-c80e38e3",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-doom-worker-workerclusterrolebinding-c858e5e5",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-doom-worker-workerclusterrole-c80e38e3",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-doom-worker-workerserviceaccount-c8d18f73",
        "namespace": "my-namespace",
      },
    ],
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "kblocks-boom-doom-worker",
      "namespace": "my-namespace",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 3000,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-doom-Worker-WorkerStatefulSet-c8da4c4c",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "f91622554b28e22660e7e504f7dd83b1ae07978d49ba83536c0901ec70d860",
        "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "f0ab16b277d350769739fd0e2f4cade22b72e6167d21a2b4057d7fbc5dc93b",
        "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
      },
      "name": "kblocks-boom-doom-worker",
      "namespace": "my-namespace",
    },
    "spec": {
      "minReadySeconds": 0,
      "podManagementPolicy": "OrderedReady",
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-doom-Worker-WorkerStatefulSet-c8da4c4c",
        },
      },
      "serviceName": "kblocks-boom-doom-worker",
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-doom-Worker-WorkerStatefulSet-c8da4c4c",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "f91622554b28e22660e7e504f7dd83b1ae07978d49ba83536c0901ec70d860",
            "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "f0ab16b277d350769739fd0e2f4cade22b72e6167d21a2b4057d7fbc5dc93b",
            "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "SECRET1",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET1",
                      "name": "secret-1",
                    },
                  },
                },
                {
                  "name": "SECRET2",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET2",
                      "name": "secret-2",
                    },
                  },
                },
                {
                  "name": "CONFIGMAP1",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "CONFIGMAP1",
                      "name": "configmap-1",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks-system",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-doom-redis.my-namespace.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ENV1",
                  "value": "env-1",
                },
                {
                  "name": "ENV2",
                  "value": "env-2",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "RELEASE_NAME",
                  "value": "{{ .Release.Name }}",
                },
                {
                  "name": "KBLOCK_OUTPUTS_BOOM-COM-V1-BOOMS",
                  "value": "",
                },
                {
                  "name": "KBLOCK_OUTPUTS_DOOM-COM-V1-DOOMS",
                  "value": "",
                },
                {
                  "name": "WORKER_INDEX",
                  "valueFrom": {
                    "fieldRef": {
                      "fieldPath": "metadata.labels['apps.kubernetes.io/pod-index']",
                    },
                  },
                },
              ],
              "image": "dummy/test-worker-image:latest",
              "imagePullPolicy": "Always",
              "name": "worker",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "startupProbe": {
                "failureThreshold": 3,
                "tcpSocket": {
                  "port": 3000,
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
                },
                {
                  "mountPath": "/kblock-DOOM-COM-V1-DOOMS",
                  "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-doom-worker-workerserviceaccount-c8d18f73",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
            },
            {
              "configMap": {
                "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
              },
              "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
            },
            {
              "configMap": {
                "name": "boom-doom-configmapvolume-block-json-c839368f",
              },
              "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
            },
          ],
        },
      },
      "updateStrategy": {
        "rollingUpdate": {
          "partition": 0,
        },
        "type": "RollingUpdate",
      },
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-doom-control-serviceaccount-c8607aa4",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-doom-control-clusterrole-c818af1f",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-doom-control-clusterrolebinding-c8446c9c",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-doom-control-clusterrole-c818af1f",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-doom-control-serviceaccount-c8607aa4",
        "namespace": "my-namespace",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-doom-control",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "f91622554b28e22660e7e504f7dd83b1ae07978d49ba83536c0901ec70d860",
        "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "f0ab16b277d350769739fd0e2f4cade22b72e6167d21a2b4057d7fbc5dc93b",
        "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
      },
      "name": "kblocks-boom-doom-control",
      "namespace": "my-namespace",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-doom-Control-Deployment-c87e3b0f",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-doom-Control-Deployment-c87e3b0f",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "f91622554b28e22660e7e504f7dd83b1ae07978d49ba83536c0901ec70d860",
            "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "f0ab16b277d350769739fd0e2f4cade22b72e6167d21a2b4057d7fbc5dc93b",
            "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "SECRET1",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET1",
                      "name": "secret-1",
                    },
                  },
                },
                {
                  "name": "SECRET2",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET2",
                      "name": "secret-2",
                    },
                  },
                },
                {
                  "name": "CONFIGMAP1",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "CONFIGMAP1",
                      "name": "configmap-1",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks-system",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-doom-redis.my-namespace.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ENV1",
                  "value": "env-1",
                },
                {
                  "name": "ENV2",
                  "value": "env-2",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "2",
                },
              ],
              "image": "dummy/test-control-image:latest",
              "imagePullPolicy": "Always",
              "name": "control",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
                },
                {
                  "mountPath": "/kblock-DOOM-COM-V1-DOOMS",
                  "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-doom-control-serviceaccount-c8607aa4",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
            },
            {
              "configMap": {
                "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
              },
              "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
            },
            {
              "configMap": {
                "name": "boom-doom-configmapvolume-block-json-c839368f",
              },
              "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "apiextensions.k8s.io/v1",
    "kind": "CustomResourceDefinition",
    "metadata": {
      "annotations": {
        "kblocks.io/metadata-namespace": "my-namespace",
      },
      "name": "booms.boom.com",
    },
    "spec": {
      "group": "boom.com",
      "names": {
        "kind": "Boom",
        "plural": "booms",
      },
      "scope": "Namespaced",
      "versions": [
        {
          "additionalPrinterColumns": [
            {
              "description": "Is resource ready",
              "jsonPath": ".status.conditions[0].status",
              "name": "Ready",
              "type": "string",
            },
            {
              "description": "The status of the resource",
              "jsonPath": ".status.conditions[0].message",
              "name": "Status",
              "type": "string",
            },
          ],
          "name": "v1",
          "schema": {
            "openAPIV3Schema": {
              "properties": {
                "name": {
                  "type": "string",
                },
                "status": {
                  "properties": {
                    "conditions": {
                      "items": {
                        "properties": {
                          "lastProbeTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "lastTransitionTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "reason": {
                            "type": "string",
                          },
                          "status": {
                            "type": "string",
                          },
                          "type": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "type",
                          "status",
                          "lastTransitionTime",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                    "lastStateHash": {
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "served": true,
          "storage": true,
          "subresources": {
            "status": {},
          },
        },
      ],
    },
  },
  {
    "apiVersion": "apiextensions.k8s.io/v1",
    "kind": "CustomResourceDefinition",
    "metadata": {
      "annotations": {
        "kblocks.io/metadata-namespace": "my-namespace",
      },
      "name": "dooms.doom.com",
    },
    "spec": {
      "group": "doom.com",
      "names": {
        "kind": "Doom",
        "plural": "dooms",
      },
      "scope": "Namespaced",
      "versions": [
        {
          "additionalPrinterColumns": [
            {
              "description": "Is resource ready",
              "jsonPath": ".status.conditions[0].status",
              "name": "Ready",
              "type": "string",
            },
            {
              "description": "The status of the resource",
              "jsonPath": ".status.conditions[0].message",
              "name": "Status",
              "type": "string",
            },
          ],
          "name": "v1",
          "schema": {
            "openAPIV3Schema": {
              "properties": {
                "name": {
                  "type": "string",
                },
                "status": {
                  "properties": {
                    "conditions": {
                      "items": {
                        "properties": {
                          "lastProbeTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "lastTransitionTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "reason": {
                            "type": "string",
                          },
                          "status": {
                            "type": "string",
                          },
                          "type": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "type",
                          "status",
                          "lastTransitionTime",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                    "lastStateHash": {
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "served": true,
          "storage": true,
          "subresources": {
            "status": {},
          },
        },
      ],
    },
  },
]
`;
